ui manager added? and readme updated

--- a/user/default/comfy.settings.json
+++ b/user/default/comfy.settings.json
@@ -1,4 +1,7 @@
 {
     "Comfy.InstalledVersion": "1.25.9",
-    "Comfy.TutorialCompleted": true
+    "Comfy.TutorialCompleted": true,
+    "Comfy.ColorPalette": "dark",
+    "Comfy.DevMode": true,
+    "Comfy.Node.ShowDeprecated": true
 }
